--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -136,126 +136,6 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./injectables/HbsRenderService.html">documentation/template-playground/hbs-render.service.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>HbsRenderService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/7)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./miscellaneous/variables.html#Handlebars">documentation/template-playground/hbs-render.service.ts</a>
-            </td>
-            <td>variable</td>
-            <td>Handlebars</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./injectables/TemplateEditorService.html">documentation/template-playground/template-editor.service.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>TemplateEditorService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/9)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./miscellaneous/variables.html#monaco">documentation/template-playground/template-editor.service.ts</a>
-            </td>
-            <td>variable</td>
-            <td>monaco</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./components/TemplatePlaygroundComponent.html">documentation/template-playground/template-playground.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>TemplatePlaygroundComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/28)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./interfaces/CompoDocConfig.html">documentation/template-playground/template-playground.component.ts</a>
-            </td>
-            <td>interface</td>
-            <td>CompoDocConfig</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/25)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./interfaces/Session.html">documentation/template-playground/template-playground.component.ts</a>
-            </td>
-            <td>interface</td>
-            <td>Session</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./interfaces/Template.html">documentation/template-playground/template-playground.component.ts</a>
-            </td>
-            <td>interface</td>
-            <td>Template</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./injectables/ZipExportService.html">documentation/template-playground/zip-export.service.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>ZipExportService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
-            </td>
-        </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                        <a href="./miscellaneous/variables.html#JSZip">documentation/template-playground/zip-export.service.ts</a>
-            </td>
-            <td>variable</td>
-            <td>JSZip</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
-            </td>
-        </tr>
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
@@ -472,28 +352,28 @@
                 <span class="coverage-count">(5/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                         <a href="./interfaces/FiltroAdmin.html">src/app/pages/admin/admin.service.ts</a>
             </td>
             <td>interface</td>
             <td>FiltroAdmin</td>
-            <td align="right" data-sort="25">
-                <span class="coverage-percent">25 %</span>
-                <span class="coverage-count">(1/4)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(4/4)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                         <a href="./interfaces/UsuarioAdmin.html">src/app/pages/admin/admin.service.ts</a>
             </td>
             <td>interface</td>
             <td>UsuarioAdmin</td>
-            <td align="right" data-sort="20">
-                <span class="coverage-percent">20 %</span>
-                <span class="coverage-count">(1/5)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(5/5)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -505,7 +385,7 @@
             <td>AdminComponent</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(11/11)</span>
+                <span class="coverage-count">(13/13)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -529,7 +409,7 @@
             <td>CategoriaComponent</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(9/9)</span>
+                <span class="coverage-count">(10/10)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -541,7 +421,7 @@
             <td>HomeComponent</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(2/2)</span>
+                <span class="coverage-count">(4/4)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -595,13 +475,25 @@
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
+                        <a href="./injectables/Json.html">src/app/services/json.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>Json</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(6/6)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
                         <a href="./components/FooterComponent.html">src/app/shared/footer/footer.ts</a>
             </td>
             <td>component</td>
             <td>FooterComponent</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
+                <span class="coverage-count">(4/4)</span>
             </td>
         </tr>
         <tr class="very-good">
