actualización de documentación

--- a/documentation/miscellaneous/typealiases.html
+++ b/documentation/miscellaneous/typealiases.html
@@ -151,7 +151,11 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Tipo de resultado devuelto por AuthService.login</p>
+                    <div class="io-description"><p>Resultado devuelto por el método <code>login()</code> de <code>AuthService</code>.</p>
+<ul>
+<li><code>ok: true</code> → Login exitoso, contiene el usuario autenticado.</li>
+<li><code>ok: false</code> → Fallo de login, contiene mensaje de error.</li>
+</ul>
 </div>
                 </td>
             </tr>
