--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -169,7 +169,7 @@
             <td>AppComponent</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
+                <span class="coverage-count">(3/3)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -193,7 +193,7 @@
             <td>AuthRepository</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(12/12)</span>
+                <span class="coverage-count">(14/14)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -205,7 +205,7 @@
             <td>AuthService</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(9/9)</span>
+                <span class="coverage-count">(11/11)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -323,9 +323,9 @@
             </td>
             <td>injectable</td>
             <td>UserService</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(8/8)</span>
+            <td align="right" data-sort="87">
+                <span class="coverage-percent">87 %</span>
+                <span class="coverage-count">(7/8)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -443,9 +443,9 @@
             </td>
             <td>component</td>
             <td>PerfilComponent</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(14/14)</span>
+            <td align="right" data-sort="93">
+                <span class="coverage-percent">93 %</span>
+                <span class="coverage-count">(14/15)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -475,13 +475,13 @@
         <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
-                        <a href="./injectables/Json.html">src/app/services/json.ts</a>
+                        <a href="./injectables/JsonService.html">src/app/services/json.ts</a>
             </td>
             <td>injectable</td>
-            <td>Json</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(6/6)</span>
+            <td>JsonService</td>
+            <td align="right" data-sort="85">
+                <span class="coverage-percent">85 %</span>
+                <span class="coverage-count">(6/7)</span>
             </td>
         </tr>
         <tr class="very-good">
