--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -323,9 +323,9 @@
             </td>
             <td>injectable</td>
             <td>UserService</td>
-            <td align="right" data-sort="87">
-                <span class="coverage-percent">87 %</span>
-                <span class="coverage-count">(7/8)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(8/8)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -338,6 +338,66 @@
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
                 <span class="coverage-count">(8/8)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./interfaces/Categoria.html">src/app/models/categoria.ts</a>
+            </td>
+            <td>interface</td>
+            <td>Categoria</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(3/3)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./interfaces/ExchangeRateResponse.html">src/app/models/exchange-rate.ts</a>
+            </td>
+            <td>interface</td>
+            <td>ExchangeRateResponse</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(4/4)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./interfaces/HomeCategoria.html">src/app/models/home-categoria.ts</a>
+            </td>
+            <td>interface</td>
+            <td>HomeCategoria</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(4/4)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./interfaces/Producto.html">src/app/models/producto.ts</a>
+            </td>
+            <td>interface</td>
+            <td>Producto</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(9/9)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                        <a href="./interfaces/Venta.html">src/app/models/ventas.ts</a>
+            </td>
+            <td>interface</td>
+            <td>Venta</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(3/3)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -443,9 +503,9 @@
             </td>
             <td>component</td>
             <td>PerfilComponent</td>
-            <td align="right" data-sort="93">
-                <span class="coverage-percent">93 %</span>
-                <span class="coverage-count">(14/15)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(15/15)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -479,9 +539,9 @@
             </td>
             <td>injectable</td>
             <td>JsonService</td>
-            <td align="right" data-sort="85">
-                <span class="coverage-percent">85 %</span>
-                <span class="coverage-count">(6/7)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(7/7)</span>
             </td>
         </tr>
         <tr class="very-good">
@@ -493,7 +553,7 @@
             <td>FooterComponent</td>
             <td align="right" data-sort="100">
                 <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(4/4)</span>
+                <span class="coverage-count">(5/5)</span>
             </td>
         </tr>
         <tr class="very-good">
